--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -7,14 +7,25 @@
     <title>My Blog</title>
 </head>
 <body>
-    <h1>My Awesome Blog</h1>  
-    <h2>Blog Post 1</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a mauris dui. Duis at metus suscipit augue bibendum bibendum. Sed porta nunc cursus nisi aliquet scelerisque. Aliquam sodales dui turpis, sit amet auctor ex dapibus at. Nullam orci nulla, interdum quis enim eu, mattis egestas augue. Maecenas lacinia, mauris vel molestie fringilla, velit leo hendrerit est, eu lacinia ex nibh nec sapien. Ut lobortis nunc eget tellus cursus ultricies. Sed lectus nisl, semper vestibulum neque at, sodales varius nibh. Aliquam bibendum venenatis dolor, sed mollis erat molestie id. Suspendisse potenti. Etiam quis metus porta, ornare dui non, lobortis leo. Sed non porta nunc. Curabitur quam elit, tempor non pellentesque a, euismod nec sem. Vivamus pretium nec sem at eleifend. Maecenas facilisis rutrum tempor. Donec sit amet nulla augue. Maecenas sagittis commodo sodales. Nullam vulputate, dolor sed scelerisque eleifend, mauris magna luctus est, a ornare tortor lorem vitae tellus. Quisque luctus id nibh ut tincidunt. Quisque elementum dui eget odio pulvinar bibendum.</p>
-    <h2>Blog Post 2</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a mauris dui. Duis at metus suscipit augue bibendum bibendum. Sed porta nunc cursus nisi aliquet scelerisque. Aliquam sodales dui turpis, sit amet auctor ex dapibus at. Nullam orci nulla, interdum quis enim eu, mattis egestas augue. Maecenas lacinia, mauris vel molestie fringilla, velit leo hendrerit est, eu lacinia ex nibh nec sapien. Ut lobortis nunc eget tellus cursus ultricies. Sed lectus nisl, semper vestibulum neque at, sodales varius nibh. Aliquam bibendum venenatis dolor, sed mollis erat molestie id. Suspendisse potenti. Etiam quis metus porta, ornare dui non, lobortis leo. </p>
-
-       <p> Sed non porta nunc. Curabitur quam elit, tempor non pellentesque a, euismod nec sem. Vivamus pretium nec sem at eleifend. Maecenas facilisis rutrum tempor. Donec sit amet nulla augue. Maecenas sagittis commodo sodales. Nullam vulputate, dolor sed scelerisque eleifend, mauris magna luctus est, a ornare tortor lorem vitae tellus. Quisque luctus id nibh ut tincidunt. Quisque elementum dui eget odio pulvinar bibendum.</p>
-    <h2>Blog Post 3</h2>
+    <div Id="drawer" style="display: inline;">
+        <div style="width:25%; display:block; float:left;" Id="Profile">
+            <h1>My Profile</h1>
+            <input type="text" id="txtContactEmail" placeholder="JDoe@email.com">
+        </div>
+        <div style="width:70%; margin-left:5%; display:block; float: left;" id="blog">
+             <h1>My Awesome Blog</h1>  
+            <h2>Blog Post 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a mauris dui. Duis at metus suscipit augue bibendum bibendum. Sed porta nunc cursus nisi aliquet scelerisque. Aliquam sodales dui turpis, sit amet auctor ex dapibus at. Nullam orci nulla, interdum quis enim eu, mattis egestas augue. Maecenas lacinia, mauris vel molestie fringilla, velit leo hendrerit est, eu lacinia ex nibh nec sapien. Ut lobortis nunc eget tellus cursus ultricies. Sed lectus nisl, semper vestibulum neque at, sodales varius nibh. Aliquam bibendum venenatis dolor, sed mollis erat molestie id. Suspendisse potenti. Etiam quis metus porta, ornare dui non, lobortis leo. Sed non porta nunc. Curabitur quam elit, tempor non pellentesque a, euismod nec sem. Vivamus pretium nec sem at eleifend. Maecenas facilisis rutrum tempor. Donec sit amet nulla augue. Maecenas sagittis commodo sodales. Nullam vulputate, dolor sed scelerisque eleifend, mauris magna luctus est, a ornare tortor lorem vitae tellus. Quisque luctus id nibh ut tincidunt. Quisque elementum dui eget odio pulvinar bibendum.</p>
+            <h2>Blog Post 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a mauris dui. Duis at metus suscipit augue bibendum bibendum. Sed porta nunc cursus nisi aliquet scelerisque. Aliquam sodales dui turpis, sit amet auctor ex dapibus at. Nullam orci nulla, interdum quis enim eu, mattis egestas augue. Maecenas lacinia, mauris vel molestie fringilla, velit leo hendrerit est, eu lacinia ex nibh nec sapien. Ut lobortis nunc eget tellus cursus ultricies. Sed lectus nisl, semper vestibulum neque at, sodales varius nibh. Aliquam bibendum venenatis dolor, sed mollis erat molestie id. Suspendisse potenti. Etiam quis metus porta, ornare dui non, lobortis leo. </p>
+        
+               <p> Sed non porta nunc. Curabitur quam elit, tempor non pellentesque a, euismod nec sem. Vivamus pretium nec sem at eleifend. Maecenas facilisis rutrum tempor. Donec sit amet nulla augue. Maecenas sagittis commodo sodales. Nullam vulputate, dolor sed scelerisque eleifend, mauris magna luctus est, a ornare tortor lorem vitae tellus. Quisque luctus id nibh ut tincidunt. Quisque elementum dui eget odio pulvinar bibendum.</p>
+            
+         <h2>Blog Post 3</h2>
+    </div>
+   
+    </div>
     <p> </p>
+
 </body>
 </html>
