--- a/ProfileExample/Assignment-4/index.html
+++ b/ProfileExample/Assignment-4/index.html
@@ -14,9 +14,13 @@
     <p>Phone (615)-767-0984</p>
     <p>Address: 321 Peach Tree Lane, Cookeville, TN 38501</p>
     <p>Assignment: Johnson Hall</p>
-    <button type="button" class="btn btn-warning mb-3">Edit Profile</button>
+    <input id="txtPayRate">
+    <input id="txtHours">
+
+    <button type="button" id="btnTest" class="btn btn-warning mb-3">Calculate</button>
   </div>
-  <script src="js/lib/jquery.min.js"></script>
+  <script src="js/lib/jquery-3.6.0.min.js"></script>
   <script src="js/lib/bootstrap.bundle.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
