--- a/ProfileExample/Assignment-4/index.html
+++ b/ProfileExample/Assignment-4/index.html
@@ -14,9 +14,26 @@
     <p>Phone (615)-767-0984</p>
     <p>Address: 321 Peach Tree Lane, Cookeville, TN 38501</p>
     <p>Assignment: Johnson Hall</p>
+    <div class="form-group">
+        <label for="txtPayRate">Pay Rate</label>
+        <input id='txtPayRate'>
+    </div>
+      <div class="form-group" id="divHours">
+        <label for='txtHours'>Hours Worked</label>
+        <input id='txtHours'>
+    </div>
+    <div>
+      <div class="form-group">
+        <label for='cboEmployeeType'>Employee Type</label>
+        <input id='cboEmployeeType'>
+    </div>
     <input id="txtPayRate">
     <input id="txtHours">
-
+    <select id="cboEmployeeType">
+        <option></option>
+        <option value="FULL"> Full Time</option> 
+        <option value="PART"> Part Time</option>
+      </select>  
     <button type="button" id="btnTest" class="btn btn-warning mb-3">Calculate</button>
   </div>
   <script src="js/lib/jquery-3.6.0.min.js"></script>
