updated assignment 4 index

--- a/ProfileExample/Assignment-4/index.html
+++ b/ProfileExample/Assignment-4/index.html
@@ -14,22 +14,19 @@
     <p>Phone (615)-767-0984</p>
     <p>Address: 321 Peach Tree Lane, Cookeville, TN 38501</p>
     <p>Assignment: Johnson Hall</p>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <label for="txtPayRate">Pay Rate</label>
         <input id='txtPayRate'>
     </div>
-      <div class="form-group" id="divHours">
+      <div class="form-group mb-3" id="divHours">
         <label for='txtHours'>Hours Worked</label>
         <input id='txtHours'>
     </div>
     <div>
       <div class="form-group">
         <label for='cboEmployeeType'>Employee Type</label>
-        <input id='cboEmployeeType'>
+        <select id='cboEmployeeType'>
     </div>
-    <input id="txtPayRate">
-    <input id="txtHours">
-    <select id="cboEmployeeType">
         <option></option>
         <option value="FULL"> Full Time</option> 
         <option value="PART"> Part Time</option>
